# esp-idf

components/esp_ringbuf/: ringbuf.c
components/esp_ringbuf/include/freertos/: ringbuf.h
components/esp_system/: esp_system.c
components/esp_system/test_apps/esp_system_unity_tests/main/: test_sleep.c
components/freertos/FreeRTOS-Kernel-SMP/: event_groups.c  queue.c  stream_buffer.c  tasks.c  timers.c
components/freertos/FreeRTOS-Kernel-SMP/include/freertos/: FreeRTOS.h  event_groups.h  projdefs.h  queue.h  task.h  timers.h
components/freertos/FreeRTOS-Kernel-SMP/portable/riscv/: port.c  portasm.S
components/freertos/FreeRTOS-Kernel-SMP/portable/riscv/include/freertos/: portmacro.h
components/freertos/FreeRTOS-Kernel-SMP/portable/xtensa/: port.c  portasm.S
components/freertos/FreeRTOS-Kernel-SMP/portable/xtensa/include/freertos/: portmacro.h
components/freertos/FreeRTOS-Kernel/portable/: port_systick.c
components/freertos/esp_additions/: freertos_tasks_c_additions.h
components/freertos/esp_additions/include/freertos/: FreeRTOSConfig.h
components/freertos/test_apps/freertos/performance/: CMakeLists.txt
components/freertos/test_apps/freertos/port/: test_fpu_in_isr.c  test_fpu_in_task.c
components/hal/include/hal/: twai_hal.h
components/spi_flash/: cache_utils.c
examples/build_system/cmake/idf_as_lib/: build-esp32p4.sh  build.sh  run-esp32p4.sh
examples/get-started/hello_world/main/: CMakeLists.txt  hello_world_main.c
examples/test_idf_build/: CMakeLists.txt  README.md
examples/test_idf_build/esp/: CMakeLists.txt
examples/test_idf_build/exec/: CMakeLists.txt  main.c
examples/test_idf_build/feat_a/: CMakeLists.txt  feat_a.c  feat_a_helper.c
examples/test_idf_build/feat_a/include/: feat_a.h
examples/test_idf_build/feat_a/priv_include/: feat_a_helper.h
examples/test_idf_build/feat_b/: CMakeLists.txt  feat_b.c  feat_b_helper.c
examples/test_idf_build/feat_b/include/: feat_b.h
examples/test_idf_build/feat_b/priv_include/: feat_b_helper.h
examples/test_idf_build/some_comp/: CMakeLists.txt  some_comp.c
examples/test_idf_build/some_comp/include/: some_comp.h
tools/ci/: executable-list.txt
